# smart_palletizer

./: .gitignore  Dockerfile  README.md  README_ALL.md  entrypoint.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
data/dataset/: dataset.yaml
data/dataset/train/: README.md
data_exploratary/: analyse_data.ipynb
devel/: _setup_util.py
devel/lib/box_detector/: box_detector_node.py  planar_patch_node.py  test_cloud_pub.py
devel/lib/pkgconfig/: smart_palletizer.pc
devel/lib/smart_palletizer/: box_detector_node.py  (+2 more)
docs/source/: conf.py  modules.rst  planar_patch_node.rst  smart_palletizier.rst
lib/: box_pose_estimator.py  masked_yolo_detector.py  planar_patch_detector.py  utils.py
log/: latest_build
notebooks/: A1_Train_YOLO_Model.ipynb  A1_prepare_training_yolo.ipynb  A1_run_yolo_detector.ipynb  A2_run_patch_detector.ipynb  A3_clean_point_clouds.ipynb  A4_estimate_box_pose.ipynb
script/: A1_a_prepare_training_yolo.ipynb  A1_prepare_training_yolo.ipynb  A1_run_yolo_detector.ipynb  A2_.ipynb  A2_run_patch_detector.ipynb  playground.ipynb
src/box_detector/: CMakeLists.txt  package.xml
src/smart_palletizer/: CMakeLists.txt  package.xml
src/smart_palletizier/: CMakeLists.txt  package.xml
src/smart_palletizier/install_orig/: local_setup.sh  setup.sh
src/smart_palletizier/install_orig/smart_palletizer/share/smart_palletizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/smart_palletizier/launch/: detect_boxes_simple.launch
src/smart_palletizier/src/: detect_boxes_node_simple.cpp
(+1038 files in other folders)
